feat: 31 Januari, 1 Februari

--- a/technical-journal.tex
+++ b/technical-journal.tex
@@ -1,4 +1,8 @@
 \documentclass{article}
 \begin{document}
 30 Januari 2026: Belum ada progres; sementara begini dulu, saya dikejar deadline UKM lain ahaha
+\par
+31 Januari 2026: Mengerjakan Hands-On 2. Kendala? Mostly waktu menyambungkan script python ke gazebo itu waktu di-run malah stuck dan tidak terhubung. Akhirnya di-run di terminal linux, bukan bawaan VSC dan bisa tersambung. Kemudian, ternyata salah juga menulis kodenya karena tidak memberikan perintah untuk menunggu beberapa detik sebelum menge-run. Akhirnya, angka delapan dapat terbuat J-2 deadline wkwkw.
+\par
+1 Februari 2026: Baru mulai mengerjakan Hands-On 1 pukul 19. Semoga waktunya cukup.
 \end{document}
